--- a/encryption program/Dockerfile
+++ b/encryption program/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:20.04
 
+ENV FLASK_PORT 8000
+
 WORKDIR /flask_app
 
 RUN apt update
@@ -16,8 +18,4 @@ RUN pip3 install -r requirements.txt
 
 COPY app ./app
 
-CMD gunicorn -w 1 app:app -b 0.0.0.0:8000
-
-EXPOSE 8000
-
-# docker build -t carlriis/flask_app .
+CMD gunicorn -w 1 app:app -b 0.0.0.0:$FLASK_PORT
