Redis slaves and masters - Statefulset

--- a/database/redis/redis.conf
+++ b/database/redis/redis.conf
@@ -5,6 +5,9 @@
 #
 # ./redis-server /path/to/redis.conf
 
+masterauth a-very-complex-password-here
+requirepass a-very-complex-password-here
+
 # Note on units: when memory size is needed, it is possible to specify
 # it in the usual form of 1k 5GB 4M and so forth:
 #
@@ -85,7 +88,7 @@ bind 0.0.0.0
 # you are sure you want clients from other hosts to connect to Redis
 # even if no authentication is configured, nor a specific set of interfaces
 # are explicitly listed using the "bind" directive.
-protected-mode yes
+protected-mode no
 
 # Accept connections on the specified port, default is 6379 (IANA #815344).
 # If port 0 is specified Redis will not listen on a TCP socket.
@@ -159,9 +162,12 @@ tcp-keepalive 300
 # By default, clients (including replica servers) on a TLS port are required
 # to authenticate using valid client side certificates.
 #
-# It is possible to disable authentication using this directive.
+# If "no" is specified, client certificates are not required and not accepted.
+# If "optional" is specified, client certificates are accepted and must be
+# valid if provided, but are not required.
 #
 # tls-auth-clients no
+# tls-auth-clients optional
 
 # By default, a Redis replica does not attempt to establish a TLS connection
 # with its master.
@@ -764,6 +770,7 @@ replica-priority 100
 # by ACLs. The ACL Log is stored in memory. You can reclaim memory with 
 # ACL LOG RESET. Define the maximum entry length of the ACL Log below.
 acllog-max-len 128
+
 # Using an external ACL file
 #
 # Instead of configuring users here in this file, it is possible to use
@@ -782,7 +789,7 @@ acllog-max-len 128
 # AUTH <password> as usually, or more explicitly with AUTH default <password>
 # if they follow the new protocol: both will work.
 #
-requirepass SuperSecretSecureStrongPass
+# requirepass foobared
 
 # Command renaming (DEPRECATED).
 #
@@ -1034,6 +1041,32 @@ lazyfree-lazy-user-del no
 # sure you also run the benchmark itself in threaded mode, using the
 # --threads option to match the number of Redis theads, otherwise you'll not
 # be able to notice the improvements.
+
+############################ KERNEL OOM CONTROL ##############################
+
+# On Linux, it is possible to hint the kernel OOM killer on what processes
+# should be killed first when out of memory.
+#
+# Enabling this feature makes Redis actively control the oom_score_adj value
+# for all its processes, depending on their role. The default scores will
+# attempt to have background child processes killed before all others, and
+# replicas killed before masters.
+
+oom-score-adj no
+
+# When oom-score-adj is used, this directive controls the specific values used
+# for master, replica and background child processes. Values range -1000 to
+# 1000 (higher means more likely to be killed).
+#
+# Unprivileged processes (not root, and without CAP_SYS_RESOURCE capabilities)
+# can freely increase their value, but not decrease it below its initial
+# settings.
+#
+# Values are used relative to the initial value of oom_score_adj when the server
+# starts. Because typically the initial value is 0, they will often match the
+# absolute values.
+
+oom-score-adj-values 0 200 800
 
 ############################## APPEND ONLY MODE ###############################
 
@@ -1637,7 +1670,7 @@ client-output-buffer-limit pubsub 32mb 8mb 60
 
 # In the Redis protocol, bulk requests, that are, elements representing single
 # strings, are normally limited ot 512 mb. However you can change this limit
-# here.
+# here, but must be 1mb or greater
 #
 # proto-max-bulk-len 512mb
 
