--- a/kubernetes configuration/api exposer/api_exposer.yaml
+++ b/kubernetes configuration/api exposer/api_exposer.yaml
@@ -28,3 +28,17 @@ spec:
               value: "http://encryption-program:8000"
           ports:
             - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-exposer
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      protocol: TCP
+      targetPort: 80
+  selector:
+    app: api-exposer
