--- a/kubernetes configuration/encryption program/encryption_program.yaml
+++ b/kubernetes configuration/encryption program/encryption_program.yaml
@@ -28,3 +28,15 @@ spec:
               value: "8000"
           ports:
             - containerPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: encryption-program
+spec:
+  ports:
+    - port: 8000
+      protocol: TCP
+      targetPort: 8000
+  selector:
+    app: encryption-program
