Application now uses Redis password secret

--- a/kubernetes configuration/api exposer/api-exposer.yaml
+++ b/kubernetes configuration/api exposer/api-exposer.yaml
@@ -59,6 +59,11 @@ data:
       listen 80;
       server_name 192.0.2.0;
       location / {
+        root /home;
+        index index.html;
+      }
+      location ^~ /api/ {
+        rewrite ^/api(.*)$ $1 break;
         proxy_pass ${API_URL}; 
       }
     }
