--- a/kubernetes configuration/entrypoint/entrypoint.yaml
+++ b/kubernetes configuration/entrypoint/entrypoint.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-exposer
+  name: entrypoint
   labels:
-    app: api-exposer
+    app: entrypoint
 spec:
   selector:
     matchLabels:
-      app: api-exposer
+      app: entrypoint
   replicas: 2
   strategy:
     type: RollingUpdate
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       labels:
-        app: api-exposer
+        app: entrypoint
     spec:
       containers:
         - image: nginx
@@ -39,7 +39,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-exposer
+  name: entrypoint
 spec:
   type: LoadBalancer
   ports:
@@ -47,7 +47,7 @@ spec:
       protocol: TCP
       targetPort: 80
   selector:
-    app: api-exposer
+    app: entrypoint
 ---
 apiVersion: v1
 kind: ConfigMap
