--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "Carl Riis",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
