--- a/kubernetes configuration/prometheus/authorize.yaml
+++ b/kubernetes configuration/prometheus/authorize.yaml
@@ -9,18 +9,21 @@ kind: ClusterRole
 metadata:
   name: prometheus-standalone
 rules:
-  - apiGroups: [""]
+  - apiGroups:
+      - ""
     resources:
+      - nodes/metrics
       - services
       - endpoints
       - pods
-    verbs: ["get", "list", "watch"]
-  - apiGroups: [""]
-    resources:
-      - configmaps
-    verbs: ["get"]
-  - nonResourceURLs: ["/metrics"]
-    verbs: ["get"]
+    verbs:
+      - get
+      - list
+      - watch
+  - nonResourceURLs:
+      - /metrics
+    verbs:
+      - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
