Prometheus kube-state-metrics

--- a/kubernetes configuration/prometheus/prometheus.yaml
+++ b/kubernetes configuration/prometheus/prometheus.yaml
@@ -37,4 +37,5 @@ spec:
           - node-exporter
           - api-server
           - kubelet
+          - kubelet-service-monitor
   version: v2.20.0
